--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,7 @@ Author URI: Your website address.
      opacity: 1 
 }
  h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h6 a:hover {
-     opacity: .8 
+     opacity: .8
 }
  a {
      color: #1f1f1f;
@@ -140,8 +140,14 @@ Author URI: Your website address.
  p{
      margin: 0px;
 }
+img {
+   width: 200px 
+}
+
  .bootstrap-select .dropdown-toggle:focus{
      outline: none !important;
+}
+}
 }
  .form-control::-moz-placeholder {
      color: #ffffff;
