--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,11 @@ Author URI: Your website address.
      line-height: 1.80857;
 }
  a {
+
+
+
+
+    
      color: #1f1f1f;
      text-decoration: none !important;
      outline: none !important;
@@ -64,7 +69,7 @@ Author URI: Your website address.
      padding: 0 0 10px 0;
      font-weight: normal;
      line-height: 120% !important;
-     color: #1f1f1f;
+     color: #000000;
      margin: 0 
 }
  h1 {
@@ -80,7 +85,7 @@ Author URI: Your website address.
      font-size: 16px 
 }
  h5 {
-     font-size: 14px 
+     font-size: 14px
 }
  h6 {
      font-size: 13px 
@@ -337,6 +342,10 @@ img {
      border: none;
      font-weight: 700;
      color: #ffffff;
+}
+.col_custom{
+    color: #000000;
+    text-align: center
 }
  @media (min-width: 1024px) {
     /* Navbar General ------*/
@@ -2216,6 +2225,7 @@ img {
      padding: 70px 0px;
 }
  .services-box-main{
+     margin-top: 1000px;
      padding: 70px 0px;
 }
  .contact-box-main{
