--- a/css/style.css
+++ b/css/style.css
@@ -119,6 +119,23 @@ Author URI: Your website address.
      padding: 12px 40px;
      font-size: 16px;
 }
+.btn-wrap{
+    position:relative;
+    text-align:center;
+}
+.btn-wrap button{
+    position: absolute;
+    background: #d33b33;
+    color: #ffffff;
+    bottom: 0;
+    right: 5%;
+    padding: 10px 20px;
+    font-weight: 700;
+    transition: all .3s ease-in-out;
+}
+.btn-wrap button:hover{
+    background: black;
+}
  .lead {
      font-size: 18px;
      line-height: 30px;
@@ -179,12 +196,14 @@ Author URI: Your website address.
      margin: 0px;
 }
 img {
-   width: 200px 
+   width: 100%; 
 }
 
+.img-container{
+    
+}
  .bootstrap-select .dropdown-toggle:focus{
      outline: none !important;
-}
 }
 }
  .form-control::-moz-placeholder {
@@ -2455,7 +2474,45 @@ img {
      white-space: nowrap;
 }
  
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  padding-top: 60px;
+}
 
+/* Modal Content/Box */
+.modal-content {
+  background-color: white;
+  margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+  border: 1px solid #888;
+  width: 40%; /* Could be more or less, depending on screen size */
+  padding: 16px;
+}
+
+/* Add Zoom Animation */
+.animate {
+  -webkit-animation: animatezoom 0.6s;
+  animation: animatezoom 0.6s
+}
+
+@-webkit-keyframes animatezoom {
+  from {-webkit-transform: scale(0)} 
+  to {-webkit-transform: scale(1)}
+}
+  
+@keyframes animatezoom {
+  from {transform: scale(0)} 
+  to {transform: scale(1)}
+}
 
 
 
