--- a/css/style.css
+++ b/css/style.css
@@ -2521,6 +2521,11 @@ img {
   to {transform: scale(1)}
 }
 
+.special-list {
+    display: flex;
+    justify-items: center;
+    align-items: center;
+}
 
 
 
